src/emit/snapshots/hebi__emit__tests__call_n.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
f(0, 1, 2)

# Func:
function `main` (registers: 4, length: 20, constants: 1)
.code
  0  | load_global [0]; f
  2  | store r0
  4  | load_smi 0
  6  | store r1
  8  | load_smi 1
  10 | store r2
  12 | load_smi 2
  14 | store r3
  16 | call r0 3
  19 | return




