src/emit/snapshots/hebi__emit__tests__class_derived_in_nested_scope_with_closure_method.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
fn test():
  u := 0
  class T(U):
    v = 0
    fn test(self):
      print self.v, u


# Func:
function `T.@init` (registers: 1, length: 7, constants: 1)
.code
  0 | load_smi 0
  2 | store_field r0 [0]; v
  5 | load_none
  6 | return



function `T.test` (registers: 2, length: 14, constants: 1)
.upvalues
  0 <- r0
.code
  0  | load_self
  1  | load_field [0]; v
  3  | store r0
  5  | load_upvalue ^0
  7  | store r1
  9  | print_n r0 2
  12 | load_none
  13 | return



function `test` (registers: 1, length: 12, constants: 2)
.code
  0  | load_smi 0
  2  | store r0
  4  | load_global [1]; U
  6  | make_class_derived [0]; <class `T` descriptor>
  8  | store r0
  10 | load_none
  11 | return



function `main` (registers: 0, length: 5, constants: 2)
.code
  0 | make_fn [0]; <function `test` descriptor>
  2 | store_global [1]; test
  4 | return




