src/emit/snapshots/hebi__emit__tests__class_derived_with_field.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
class T(U):
  v = 0


# Func:
function `main` (registers: 3, length: 14, constants: 3)
.code
  0  | load_global [1]; U
  2  | store r1
  4  | load_smi 0
  6  | store r2
  8  | make_data_class_derived [0], r1; <class `T` descriptor>
  11 | store_global [2]; T
  13 | return




