src/emit/snapshots/hebi__emit__tests__class_in_nested_scope_with_closure_method.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
fn test():
  u := 0
  class T:
    v = 0
    fn test(self):
      print self.v, u


# Func:
function `T.test` (registers: 2, length: 14, constants: 1)
.upvalues
  0 <- r0
.code
  0  | load_self
  1  | load_field [0]; v
  3  | store r0
  5  | load_upvalue ^0
  7  | store r1
  9  | print_n r0 2
  12 | load_none
  13 | return



function `test` (registers: 2, length: 15, constants: 1)
.code
  0  | load_smi 0
  2  | store r0
  4  | load_smi 0
  6  | store r1
  8  | make_data_class [0] r1; <class `T` descriptor>
  11 | store r0
  13 | load_none
  14 | return



function `main` (registers: 1, length: 5, constants: 2)
.code
  0 | make_fn [0]; <function `test` descriptor>
  2 | store_global [1]; test
  4 | return




