src/emit/snapshots/hebi__emit__tests__class_instance.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
class T: pass

T()


# Func:
function `main` (registers: 0, length: 8, constants: 2)
.code
  0 | make_class_empty [0]; <class `T` descriptor>
  2 | store_global [1]; T
  4 | load_global [1]; T
  6 | call0
  7 | return




