src/emit/snapshots/hebi__emit__tests__class_with_field.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
class T:
  v = 0


# Func:
function `main` (registers: 1, length: 10, constants: 2)
.code
  0  | load_smi 0
  2  | store r0
  4  | make_class [0] r0; <class `T` descriptor>
  7  | store_global [1]; T
  9  | return




